<resources>
    <string name="app_name">LegallyMe</string>

    <!-- General Use Strings -->
    <string name="go_button">Go</string>

    <!-- Documents Tab Strings -->
    <string name="documents_tab_selection_state_textview">Where are you currently residing?</string>
    <string name="documents_tab_selection_document_textview">What records would you like to change?</string>
    <string name="documents_tab_selection_petition_textview">Have you already submitted a name change petition to your local circuit court?</string>
    <string name="documents_tab_selection_change_textview">What will you be changing?</string>
    <string name="documents_tab_selection_title">Find documents</string>
    <string name="documents_tab_selection_subtitle">Search by state and type</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="radio_idk">Not sure</string>
    <string name="home_tab_title">LegallyMe</string>
    <string name="home_tab_subtitle">Overcoming barriers, together</string>
    <string name="home_tab_splash_screen_text">Welcome to LegallyMe! Here you\'ll find resources on a per-state basis for legal documents related to transitioning. Navigate to the \'Documents\' tab to begin.</string>
    <string name="favorites_tab_title">Bookmarks</string>
    <string name="favorites_tab_subtitle"><![CDATA[Your saved documents & information]]></string>
    <string name="search_tab_title">Search for local lawyers</string>
    <string name="search_tab_subtitle"><![CDATA[Local lawyers, paralegals, & law firms]]></string>
    <string name="birth_cert">Birth certificate</string>
    <string name="drivers">Driver\'s license</string>
    <string name="social">Social security</string>
    <string name="passport">Passport</string>
    <string name="gender">Gender marker</string>
    <string name="name">Name</string>

    <!-- File Link Strings -->
    <string name="application_for_name_change">http://www.courts.state.va.us/forms/circuit/cc1411.pdf</string>
    <string name="order_for_name_change">http://www.cityofchesapeake.net/assets/forms/departments/circuit_court_clerk/order-for-name-change-adult.pdf</string>
    <string name="petition_for_fee_waiver">http://www.courts.state.va.us/forms/circuit/cc1414.pdf</string>
    <string name="application_for_certification_of_a_vital_record">http://www.vdh.virginia.gov/content/uploads/sites/93/2016/07/appform.pdf</string>
    <string name="petition_for_change_of_sex">http://www.courts.state.va.us/forms/circuit/cc1451.pdf</string>
    <string name="order_for_change_of_sex">http://www.transequality.org/sites/default/files/docs/id/VA%20Order%20for%20Change%20of%20Sex.pdf</string>
    <string name="gender_designation_change_request">https://www.dmv.virginia.gov/webdoc/pdf/dl17.pdf</string>
    <string name="drivers_license_and_identification_card_application">https://www.dmv.virginia.gov/webdoc/pdf/dl1p.pdf</string>

    <string name="checklistHeading">This is your personalized checklist! You still need to:\\n\\n</string>
</resources>
